stylesheets/stylesheet.css
/* === GENERAL STUFF === */
* {
  box-sizing: border-box; }

body {
  padding: 0;
  margin: 0;
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.5;
  color: #606c71;
}

a {
  cursor: pointer;
  /*color: #602480;*/
  color: #000099;
  text-decoration: none;
  padding-bottom: .15rem;
  transition: all .3s;
}
a:hover {
  /*border-bottom: 1px solid #602480;*/
  border-bottom: 1px solid #000099;
}

ul {
  list-style-type: circle;
  -webkit-padding-start: 20px;
  width: 100%;
}

/* === NAVIGATION BAR === */
nav {
  text-align: center;
  padding: 2rem 4rem;
  /*background: rgba(255,255,255,.5);*/
  display: block;
  overflow: hidden;
  margin: 0 auto;
}

nav ul {
  list-style-type: none;
  margin: 0;
  float: right;
  width: initial;
}

nav li,
nav li.dropdown {
  display: inline-block;
  margin-left: 1rem;
  text-transform: uppercase;
  font-weight: 300;
  font-size: .9rem;
  color: #000099;
  cursor: pointer;
}

nav li a {
  display: block;
  cursor: pointer;
}

nav img {
  float: left;
}

nav .current {
  /*border-bottom: 1px solid #602480;*/
  border-bottom: 1px solid #000099;
}

nav .current a,
nav .current a:hover,
nav .current a:active  {
  border: none;
}

nav .dropdown::after {
  content: "";
  display: inline-block;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 6px solid #000099;
  margin: 2px 0px 2px 2px;
}

nav .dropdown:hover .dropdown-content {
    display: block;
}

nav .dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  padding: 12px 16px 12px 4px;
  z-index: 1;
  text-align: left;
  /*line-height: 2rem;*/
}

nav .dropdown-content li {
  padding: .5rem 0; 
}

nav .dropdown-content li a,
nav .current .dropdown-content li a {
  border-bottom: 1px solid #f9f9f9;
}

nav .dropdown-content li a:hover,
nav .current .dropdown-content li a:hover {
  /*border-bottom: 1px solid #602480;*/
  border-bottom: 1px solid #000099;
}

.nav-trigger {
  display: none;
}

/*the site name in the navbar*/
/*h1.site-name {
    max-width: 100px;
    font-size: 23px;
    font-size: 1rem;
    text-align: left;
    color: gray;
    margin-left: 73px;
    margin-top: -4px;
    padding: 0px;
    position: absolute;
    font-weight: 300;
    line-height: 30px;
}*/
nav h1 {
  max-width: 1rem;
  font-size: 1.45rem;
  text-align: left;
  color: #159957;
  margin-left: 4.7rem;
  margin-top: -2px;
  padding: 0px;
  position: absolute;
  font-weight: 300;
  line-height: 1.7rem;
}

/* NAVIGATION BAR media queries */
@media screen and (min-width: 64em) {
  nav {
    max-width: 58rem;
    padding: 1rem 3rem;
  }
  nav ul {
    padding-top: 1rem;
  }
  nav img {
    max-width: 3.2rem;
  }
}

@media screen and (min-width: 42em) and (max-width: 64em) {
  nav {
    padding: 1.2rem 4rem;
  }
  nav ul {
    padding-top: .7rem;
  }
  nav img {
    max-width: 2.6rem;
  }
  nav h1 {
    font-size: 1.15rem;
    margin-left: 4.1rem;
    line-height: 1.4rem;
  }
}
/* ... */

